<resources>
    <string name="app_name">TAReserveFinal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_hint">Notification student will see</string>
    <string name="no_student1">No Current Student</string>
    <string name="wait_message">Your TA is waiting!!</string>
    <string name="wait_submessage">You have 1 minute to accept</string>
    <string name="confirm_title">Are you sure you want to queue for this TA?</string>
    <string name="confirm_subtitle">You will be Nth in line</string>
    <string name="Accept">Accept</string>
    <string name="wait_time">60</string>
    <string name="enter_line">GET IN LINE</string>
    <string name="exit_line">YOUR ARE IN LINE</string>
    <string name="Decline">Decline</string>
    <string name="no_student2">No Students in Line!</string>
    <string name="hours_start">Start Your Hours</string>
    <string name="hours_work">Hours In Progress</string>
    <string name="next_student">Take Next Student</string>
    <string name="server_client_id">886038774832-lja4e3reta073i1iup90qmo49aeeepuc.apps.googleusercontent.com</string>

    <!-- Login Constants  -->
    <string name="LoginPage">Login Page</string>
    <string name="studentLogin">I am a Student</string>
    <string name="taLogin">I am a Teaching Assistant</string>

    <string name="studentLoginPage">Student Login</string>
    <string name="studentEmailInputHint">Enter Email Here</string>
    <string name="studentSignInButton">Sign In</string>
    <string name="studentCreateAccButton">Create an Account</string>

    <string name="studentRegisterPage">Student Register</string>
    <string name="studentRegisterNameInputHint">Enter Name Here</string>
    <string name="StudentRegisterButton">Create Account</string>
    <string name="studentRegisterHintEmail">example@vt.edu</string>
    <string name="studentRegisterHintName">John Doe</string>

    <string name="registerSuccess">Registration Successful</string>
    <string name="returnToSignInButton">Press Here to Return to Sign In</string>

    <string name="taLoginPage">TA Login</string>

    <!-- Class Selection Constants -->
    <string name="chooseClassText">Course Selection</string>
    <string name="chooseClassLoading">Loading…</string>

    <!-- TA Selection Constants -->
    <string name="chooseTAText">TA Selection</string>
    <string name="chooseTALoading">Loading…</string>

    <!-- TA Info Constants -->
    <string name="taNameText">TA Name</string>
    <string name="taTimesText">Office Hours:</string>
    <string name="taDescriptionText">Description:</string>
    <string name="queueUpButtonText">Get in Line</string>

    <!-- TA View Constants -->
    <string name="seeImageView">Press here to edit your profile</string>
    <string name="scheduleMsgHint">Enter your Office Hours here</string>
    <string name="scheduleButtonText">Update Office Hours</string>
    <string name="descriptionMsgHint">Enter your Location here</string>
    <string name="descriptionButtonText">Update Location</string>
    <string name="previewText">Profile Preview:</string>

    <!-- TA Image Constants -->
    <string name="taImageSelectionText">TA Edit Profile</string>
    <string name="currentImage">Current Image:</string>
    <string name="loading">Loading…</string>
    <string name="setNewImageButton">Upload Image</string>

    <!-- Remove Class Constants -->
    <string name="removeClassText">Remove Courses</string>
    <string name="removeClassButton">Delete</string>
    <string name="cancelRemoveClassButton">Cancel</string>
    <string name="removeCourseLoading">Loading…</string>

</resources>
