<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="266dp"
        android:layout_height="385dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/timerTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="39dp"
            android:text="@string/wait_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="70dp"
            app:layout_constraintBottom_toTopOf="@+id/declineButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/declineButton"
            android:layout_width="80dp"
            android:layout_height="39dp"
            android:layout_marginStart="47dp"
            android:layout_marginBottom="44dp"
            android:text="@string/Decline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/acceptButton" />

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="81dp"
            android:layout_height="39dp"
            android:layout_marginStart="29dp"
            android:layout_marginBottom="43dp"
            android:text="@string/Accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginBottom="42dp"
            android:text="@string/wait_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/progressBar2"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="109dp"
            android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toTopOf="@+id/timerTime"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>